# dokany

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BuildAll.target  CHANGELOG.md  Dokan.props  README.md  Rebracer.xml  appveyor.yml  build.bat  build.ps1  builddebug.bat  cleanall.bat  dirs  dokan.sln  license.mit.txt  mirror_test.ps1  sign.bat  sign.ps1  sonarbuild.bat  sonarvars.bat  updatereadme.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
UnitTests/: ErrorCodes.cpp  FileSystemTests.cpp  FileSystemTests.cpp~RF9a2366d.TMP  UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/fsx/: fsx.cpp
cert/: DokanCA.cer  DokanCA.pvk  DokanSign.cer  DokanSign.pfx  DokanSign.pvk  Go Daddy Class 2 Certification Authority.cer  Go Daddy Root Certification Authority - G2.cer  dokan-import.ps1  dokan-sign.ps1
chocolatey/: dokany.nuspec.template  package.ps1  release.ps1
chocolatey/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1.template
documentations/: Doxyfile  mainpage.md
documentations/resources/: doxy-boot.js
dokan/: access.c  cleanup.c  close.c  create.c  directory.c  dokan.c  dokan.def  dokan.h  dokan.rc  dokan.vcxproj  dokan_pool.c  dokan_pool.h  dokan_vector.c  dokan_vector.h  dokanc.h  dokani.h  extern.def  fileinfo.c  fileinfo.h  flush.c  list.h  lock.c  makefile  mount.c  ntstatus.c  ntstatus.i  read.c  readme.ja.txt  readme.txt  resource.h  security.c  setfile.c  sources  status.c  timeout.c  version.c  volume.c  write.c
dokan_control/: addmanifest.bat  dokan_control.vcxproj  dokanctl.c  dokanctl.exe.manifest  sources
dokan_fuse/: CMakeLists.txt  CMakelists.txt  build.bat  build.ps1  cleancmake.bat  dokan_fuse.vcxproj  dokan_fuse.vcxproj.filters  pkg-config.pc.in
dokan_fuse/cmake/: toolchain-i686-pc-cygwin.cmake
dokan_fuse/include/: docanfuse.h  dokanfuse.h  fuse.h  fuse_common.h  fuse_opt.h  fuse_sem_fix.h  fuse_win.h  fusemain.h  utils.h
dokan_fuse/pkg/: .PKGINFO
dokan_fuse/pkg/opt/include/dokan_fuse/: ScopeGuard.h  fuse.h  fuse_common.h  fuse_win.h  fusemain.h  utils.h
dokan_fuse/pkg/usr/lib/pkgconfig/: fuse.pc
dokan_fuse/src/: docanfuse.cpp  dokanfuse.cpp  dokanfuse.def  dokanfuse.rc  fuse_helpers.c  fuse_opt.c  fusemain.cpp  resource.h  utils.cpp
dokan_install/: RunInstaller.ps1  build.bat  dokan.inf  install-pdb.nsi  install-redist.nsi  install.nsi  licdata.rtf  sign.bat
dokan_install/Dokan.BootstrapperUX/: BootstrapperCore.config  BundleProperties.cs  Dokan.BootstrapperUX.csproj  DokanBootstrapperApplication.cs  FadeOutThenInTransition.cs  FeatureInstallationInfo.cs  FeatureProperties.cs  IBootstrapperApplicationAware.cs  IPackageItem.cs  InstallationLevels.cs  InstallationTypeChangedEventArgs.cs  InstallerCommands.cs  InverseBoolValueConverter.cs  MBAPrereqPackage.cs  Util.cs  (+6 more)
dokan_mirror/: addmanifest.bat  dokan_mirror.vcxproj  makefile  mirror.c  mirror.exe.manifest  sources
dokan_mount/: dokan_mount.vcxproj  mount.c  mount.h  mounter.c  sources
dokan_net/: license.txt  readme.ja.txt  readme.txt
dokan_np/: dokan_np.rc  dokan_np.vcxproj  dokannp.c  dokannp.def  resource.h  sources
dokan_sshfs/: readme.ja.txt  readme.txt
dokan_vsix/: dokan_vsix.csproj  dokan_vsix.sln  license.mit.txt  source.extension.vsixmanifest
dokan_wix/: Bootstrapper.wixproj  DokanMSI_ARM64.wixproj  DokanMSI_x64.wixproj  DokanMSI_x86.wixproj  Dokan_ARM64.wxs  Dokan_WiX.sln  Dokan_x64.wxs  Dokan_x86.wxs  README.url  SetAssemblyVersion.sln  build.bat  dokan.ddf  dokan.inf  dokanx64.ddf  dokanx86.ddf  version.txt  version.xml
samples/: memfs_test.ps1  mirror_test.ps1
scripts/: build.ps1  build_and_release.ps1  build_helper.ps1  build_installer.ps1  install_wlk_ifstest.ps1  run_ifstest.ps1  sign.ps1  sonar-build.ps1
sys/: access.c  cleanup.c  close.c  create.c  device.c  directory.c  dispatch.c  dokan.c  dokan.h  dokan.inf  dokan.rc  dokan_utility.c  dokanfs_msg.mc  event.c  except.c  fileinfo.c  flush.c  fscontrol.c  howtobuild.txt  init.c  irp_buffer_helper.c  irp_buffer_helper.h  lock.c  notification.c  pnp.c  public.h  read.c  security.c  sources  sys.vcxproj  sys.vcxproj.filters  timeout.c  volume.c  write.c
(+359 files in other folders)
